# huggingface-tokenizer-in-cxx

./: .gitignore  .gitmodules  0.md  1.md  CMakeLists.txt  README.md  bpe.cc  bpe.h  bpe.py  bpe_test.cc  build-re2.sh  build.sh  r.cc  t.cc  t.py  u.cc  u.md  vocab-cxx.py
RE2Sample/RE2Sample/: ViewController.h  ViewController.m  use_re2.cpp
RE2Sample/RE2Sample.xcodeproj/: project.pbxproj
RE2Sample/RE2Sample.xcodeproj/project.xcworkspace/xcuserdata/y.xcuserdatad/: UserInterfaceState.xcuserstate
RE2Sample/RE2Sample.xcodeproj/xcuserdata/y.xcuserdatad/xcschemes/: xcschememanagement.plist
SampleApp/SampleApp/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.m  main.m  use_re2.cpp  vocab.txt
SampleApp/SampleApp.xcodeproj/: project.pbxproj
SampleTokenizeApp/SampleTokenizeApp/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
SampleTokenizeApp/SampleTokenizeApp.xcodeproj/: project.pbxproj
SampleTokenizeApp/SampleTokenizeApp.xcodeproj/xcuserdata/y.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: bpe.cc  bpe.h  bpe.py  bpe_test.cc
tokenizer/: bpe.py  bpe_test.cc
tokenizer/assets/: README.md
tool/: cmp.py  data.py  jax-gpt-generate.py  json-to-txt.py  pytorch-gpt-generate.py  t.py  vocab-cxx.py
